   is used from python 3.9 to 3.11 (Issue #4401, PR #4402)
 * updated tests that used assert_almost_equal(..., decimal={N}) with 
   equivalent assert_allclose(...  rtol=0, atol=1.5e-{N}) (issue modernize
   testing code #3743, PR Replaced numpy.testing.assert_almost_equal to 
   numpy.testing.assert_allclose #4438)

Deprecations
 * Unknown masses are set to 0.0 for current version, this will be depracated
   in version 3.0.0 and replaced by :class:`Masses`' no_value_label attribute(np.nan)
   (PR #3753)
 * The MDAnalysis.anaylsis.encore module has been deprecated in favour of the
   mdaencore MDAKit and will be removed in version 3.0.0 (PR #4737)
 * The MMTF Reader is deprecated and will be removed in version 3.0
   as the MMTF format is no longer supported (Issue #4634)
 * The MDAnalysis.analysis.waterdynamics module has been deprecated in favour
   of the waterdynamics MDAKit and will be removed in version 3.0.0 (PR #4404)
 * The MDAnalysis.analysis.psa module has been deprecated in favour of
   the PathSimAnalysis MDAKit and will be removed in version 3.0.0
   (PR #4403)


12/26/23 IAlibay, ianmkenney, PicoCentauri, pgbarletta, p-j-smith, 
         richardjgowers, lilyminium, ALescoulie, hmacdope, HeetVekariya, 
         JoStoe, jennaswa, ljwoods2

 * 2.7.0

Fixes
  * Fix doctest errors of lib/transformations.py (Issue #3925, PR #4370)
  * Fix documentation building errors due to `html_static_path` and unindented
    block of code (Issue #4362, PR #4365)
  * Updated cimport for numpy to maintain cimport consistency (Issue #3908)
  * Fix `NoJump` unwrapping for jumps on the second frame in a
    trajectory (PR #4258, Issue #4257)
  * Deprecated np.float_ and np.NaN aliases have been replaced with
    their original type value (np.float64 and np.nan) (PR #4272)
  * Fixes a case where qcprot.CalcRMSDRotationalMatrix would return a
    RMSD of None
  * Fixes hydrogenbonds tutorial path to point to hbonds (Issue #4285, PR #4286)